--- a/src/app/dronedash/dronedash.component.css
+++ b/src/app/dronedash/dronedash.component.css
@@ -6,6 +6,22 @@
     color:#f1f1f1;
 }
 
+.clearbtn{
+    margin-left:40%;
+    margin-top:30px;
+    background-color: white;
+    color: black;
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+}
+
 .barcodeData{   
     display:inline-block;
     background:#f1f1f1;
@@ -36,10 +52,12 @@
 .container {
     padding: 2px 16px;
     max-height: 300px;
-    min-height: 200px;
+    min-height: 150px;
     overflow-y: scroll;
 }
-
+.container div{
+    display:inline-block;
+}
 @media screen and (min-width:650px){
     .dashBoard{
         margin-left:15%;
